--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Brandon S. Byers</h1>
-      <p>I'm <span class="typed" data-typed-items="an Engineer, a Builder, an Explorer, a WELL AP"></span></p>
+      <p>I'm <span class="typed" data-typed-items="an Engineer, a Builder, a Designer, an Explorer"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -85,9 +85,11 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>  Hi, my name is Brandon. I chose to study civil engineering because I am fascinated by the mechanics of what holds up our civilization. Like many engineers, my interest in building began as a child playing with Lego sets, balsa wood bridges, and observing what happened if I dammed up the creek in our backyard. At Georgia Tech my concentration was in structural engineering and my interests expanded into global infrastructure projects. I was invited to the <a href="https://grandchallenges.gatech.edu/content/all-about-gc">Grand Challenges community</a>, earned the <a href="https://oie.gatech.edu/ip/about-ip-program">International Plan</a> degree designation, and helped lead teams in Engineers Without Borders and Engineers for a Sustainable World. While studying civil engineering I also went to study at Nanyang Technical University in Singapore through an exchange program. In Singapore, my imagination of what a city could be was drastically expanded! Singapore has fantastic public transportation, biophilic design, clean streets and community involvement. <!--Additionally, I interned for a non-profit in Historic South Atlanta called <a href="https://www.fcsministries.org/">Focused Community Strategies</a> who invests deeply in one under-resourced Atlanta neighborhood at a time, building upon the neighborhood’s strengths to create a flourishing community. Here I learned the power of long-term and inclusive community development through using tools like the Flourishing Neighborhood Index and working side-by-side with community members. --> </p><br>
-          <p>After graduating from Georgia Tech I worked for AECOM as a structural engineer in the water business line. Most of my projects were on dams and hydraulic structures. AECOM was a fantastic opportunity because it is a global company and named one of Fortune magazine's "World's Most Admired Companies". During my time there I had the opportunity to work at Mosul Dam in northern Iraq for about 8 months. This was a dream opportunity for me to combine my interests in global development projects and my skills as an engineer. I was thankful to also be working in the same office as the stakeholders, the community who lives next to the dam. It became clear to me that the dam was more than an infrastructure project, it was symbolic, a unifying motif in the narrative of the community. The dam brought power and irrigation, was where people would go for a picnic or to watch birds, and was where multiple generations in a family would work together.</p><br>
-          <p>While in graduate school at Stanford I became increasingly interested in how the built environment played a role in our communities and personal lives. How does the built environment directly affect, support, or even hurt the individuals it was designed to serve? I started research in <a href="https://sites.google.com/stanford.edu/stanford-billington-lab/home?authuser=0">Dr. Sarah Billington's Lab</a> where her group studies the impact of building design, materials, and symbols on human wellbeing. In further pursuit of these interests, I became a <a href="https://www.wellcertified.com/">WELL Accredited Professional</a> over the summer of 2020. <!--As I've worked and studied the mechanics of what holds up our civilization, I have learned it's more than reinforced concrete columns and steel beams, it's those who build and use them! I aim to continue to research, explore, and build a better and more egalitarian environment for both the world and all its people.--> I have been a Course Assistant for CEE 223 - Materials for Sustainable Built Environments. Here, I developed an added module on Embodied Carbon and have developed an interest in using tools like Life Cycle Assessments to fully understand the impacts buildings have on our environment. I aim to continue to explore building impact on wellbeing, design and construction methods on building waste and reuse, new ways to quantify and implement data on the design, construction, and deconstruction workflows.</p>
+          <p>  Hi, my name is Brandon. I chose to study civil engineering because I am fascinated by the mechanics of what holds up our civilization. Like many engineers, my interest in building began as a child playing with Lego sets, balsa wood bridges, and observing what happened if I dammed up the creek in our backyard. </p><br>
+            <p> strong>Bachelor's Degree:</strong> At Georgia Tech my concentration was in structural engineering and my interests expanded into global infrastructure projects. I was invited to the <a href="https://grandchallenges.gatech.edu/content/all-about-gc">Grand Challenges community</a>, earned the <a href="https://oie.gatech.edu/ip/about-ip-program">International Plan</a> degree designation, and helped lead teams in Engineers Without Borders and Engineers for a Sustainable World. While studying civil engineering I also went to study at Nanyang Technical University in Singapore through an exchange program. In Singapore, my imagination of what a city could be was drastically expanded! Singapore has fantastic public transportation, biophilic design, clean streets and community involvement. <!--Additionally, I interned for a non-profit in Historic South Atlanta called <a href="https://www.fcsministries.org/">Focused Community Strategies</a> who invests deeply in one under-resourced Atlanta neighborhood at a time, building upon the neighborhood’s strengths to create a flourishing community. Here I learned the power of long-term and inclusive community development through using tools like the Flourishing Neighborhood Index and working side-by-side with community members. --> </p><br>
+          <p><strong>Work Experience Before Grad School:</strong> After graduating from Georgia Tech I worked for AECOM as a structural engineer in the water business line. Most of my projects were on dams and hydraulic structures. AECOM was a fantastic opportunity because it is a global company and named one of Fortune magazine's "World's Most Admired Companies". During my time there I had the opportunity to work at Mosul Dam in northern Iraq for about 8 months. This was a dream opportunity for me to combine my interests in global development projects and my skills as an engineer. I was thankful to also be working in the same office as the stakeholders, the community who lives next to the dam. It became clear to me that the dam was more than an infrastructure project, it was symbolic, a unifying motif in the narrative of the community. The dam brought power and irrigation, was where people would go for a picnic or to watch birds, and was where multiple generations in a family would work together.</p><br>
+          <p><strong>Master's Degree:</strong> While in graduate school at Stanford I became increasingly interested in how the built environment played a role in our communities and personal lives. How does the built environment directly affect, support, or even hurt the individuals it was designed to serve? I started research in <a href="https://sites.google.com/stanford.edu/stanford-billington-lab/home?authuser=0">Dr. Sarah Billington's Lab</a> where her group studies the impact of building design, materials, and symbols on human wellbeing. In further pursuit of these interests, I became a <a href="https://www.wellcertified.com/">WELL Accredited Professional</a> over the summer of 2020. <!--As I've worked and studied the mechanics of what holds up our civilization, I have learned it's more than reinforced concrete columns and steel beams, it's those who build and use them! I aim to continue to research, explore, and build a better and more egalitarian environment for both the world and all its people.--> I was a Course Assistant for CEE 223 - Materials for Sustainable Built Environments. Here, I added a module on Embodied Carbon and have developed an interest in using approaches like Life Cycle Assessments to fully understand the impacts buildings have on our environment. I aim to continue to explore building impact on wellbeing, design and construction methods on building waste and reuse, new ways to quantify and implement data on the design, construction, and deconstruction workflows.</p>
+       <p><strong>PhD Degree and Beyond:</strong> I am joining <a href="http://catherinedewolf.com/">Prof. Dr. Catherine De Wolf's</a> lab Circular Engineering for Architecture as a PhD Researcher at ETH Zürich. Here, I am excited to explore using digital technologies as an approach for applying circular economy principles to the built environment! </p>
         </div>
 
         <div class="row">
@@ -253,7 +255,7 @@
             <h3 class="resume-title">Summary</h3>
             <div class="resume-item pb-0">
               <h4>Brandon S. Byers, EIT, WELL AP</h4>
-              <p><em>Driven and collaborative engineer with over 2 years of design and construction experience in the built environment, whose focus is on building egalitarian spaces for happier and healthier occupants.</em></p>
+              <p><em>An engineer with an enthusiasm for architecture and holistic sustainability whose work is combining over 2 years of design and construction experience to researching how to apply circular economy principles to the built environment.</em></p>
               <ul>
                 <li>Stanford, CA</li>
                 <li>(706) 910-5433</li>
@@ -262,6 +264,12 @@
             </div>
 
             <h3 class="resume-title">Education</h3>
+              <div class="resume-item">
+              <h4>Ph.D. Dept. of Civil, Environmental and Geomatic Engineering</h4>
+              <h5>2021 - 2025</h5>
+              <p><em>ETH Zurcih, Zürich, Switzerland</em></p>
+              <p>PhD Researcher in the Circular Engineering for Architecture lab advised by Prof. Dr. Catherine De Wolf.</p>
+            </div>
             <div class="resume-item">
               <h4>M.Sc. Sustainable Design &amp; Construction</h4>
               <h5>2019 - 2021</h5>
@@ -291,19 +299,19 @@
             <div class="resume-item">
               <h4>Technical</h4>
               <ul>
-                <li>Data Analysis and Visualization: R, Power BI</li>
-                <li>Building Information Modeling: BIM 360, Revit, Sketchup</li>
-                <li>Microsoft Office and Visual Basic</li>
+                <li>Data Analysis and Visualization: R, Power BI, Python</li>
+                <li>Building Information Modeling: BIM 360, Revit, Dynamo, Sketchup</li>
+                <li>Sustainability: SimaPro, EC3, OneClickLCA</li>
               </ul>
             </div>
-            <div class="resume-item">
+            <!-- <div class="resume-item">
               <h4>Interpersonal</h4>
               <ul>
                 <li>Collaboration</li>
                 <li>Adaptability</li>
                 <li>Communication</li>
               </ul>
-            </div>
+            </div> -->
             <div class="resume-item">
               <h4>Personal</h4>
               <ul>
